Fix left padding on promos for visibility

--- a/app/assets/stylesheets/small-screen-index.scss
+++ b/app/assets/stylesheets/small-screen-index.scss
@@ -46,13 +46,23 @@ $break-large:500px;
       height: 300px;
       padding-top: 0px;
 
+      h1{
+        font-size: 40px
+
+
+      }
+
+      .about-me-container{
+        padding-top:50px;
+      }
+
     }
 
     .promo-container{
-
-      padding: 0px;
+      padding: 0px 10px;
       position: relative;
-      .promo{
+
+      .promo {
         width: auto;
         float: none;
         padding: 10px 0px 0px 0px;
